Fix news word wrap

--- a/src/pages/game/index.module.scss
+++ b/src/pages/game/index.module.scss
@@ -1,3 +1,3 @@
-.news-content {
+.newsContent {
   overflow-wrap: break-word;
 }
